// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Beagle Error - render correctly with details Snapshot Should match the snapshot 1`] = `
<BeagleError
  className="Test Class"
  errors={
    Array [
      Object {
        "message": "First Message",
      },
      Object {
        "message": "Second Message",
      },
    ]
  }
  retry={[MockFunction]}
/>
`;

exports[`Beagle Error - render correctly without details Snapshot Should match the snapshot 1`] = `
<BeagleError
  className="Test Class"
  errors={Array []}
  retry={[MockFunction]}
/>
`;
